@@ -40,6 +40,7 @@ class TimeZone
     "London"                       => "Europe/London",
     "Casablanca"                   => "Africa/Casablanca",
     "Monrovia"                     => "Africa/Monrovia",
+    "UTC"                          => "UTC",
     "Belgrade"                     => "Europe/Belgrade",
     "Bratislava"                   => "Europe/Bratislava",
     "Budapest"                     => "Europe/Budapest",
@@ -259,7 +260,7 @@ class TimeZone
          [ -7_200, "Mid-Atlantic" ],
          [ -3_600, "Azores", "Cape Verde Is." ],
          [      0, "Dublin", "Edinburgh", "Lisbon", "London", "Casablanca",
-                   "Monrovia" ],
+                   "Monrovia", "UTC" ],
          [  3_600, "Belgrade", "Bratislava", "Budapest", "Ljubljana", "Prague",
                    "Sarajevo", "Skopje", "Warsaw", "Zagreb", "Brussels",
                    "Copenhagen", "Madrid", "Paris", "Amsterdam", "Berlin",
